--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,6 +1,9 @@
 #
 #  Name: RELEASE_NOTES
 #
+R7.10-1.0.1:        lorelli, 09/24/2024
+    Build against scaler R2.10.2-1.1.0
+
 R7.10-1.0.0:		lorelli, 09/16/2024
     Initial import of community developed code
     Added SLAC build system changes
